# docs/openapi.json
@@ -12,7 +12,7 @@
           "authentication"
         ],
         "summary": "Register",
-        "description": "Register a new user with username/password",
+        "description": "Register a new user and return token + user",
         "operationId": "register_api_v1_auth_register_post",
         "requestBody": {
           "content": {
@@ -30,7 +30,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserResponse"
+                  "$ref": "#/components/schemas/AuthResponse"
                 }
               }
             }
@@ -72,7 +72,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Token"
+                  "$ref": "#/components/schemas/AuthResponse"
                 }
               }
             }
@@ -1378,6 +1378,28 @@
   },
   "components": {
     "schemas": {
+      "AuthResponse": {
+        "properties": {
+          "access_token": {
+            "type": "string",
+            "title": "Access Token"
+          },
+          "token_type": {
+            "type": "string",
+            "title": "Token Type",
+            "default": "bearer"
+          },
+          "user": {
+            "$ref": "#/components/schemas/UserResponse"
+          }
+        },
+        "type": "object",
+        "required": [
+          "access_token",
+          "user"
+        ],
+        "title": "AuthResponse"
+      },
       "Body_create_channel_api_v1_channels__post": {
         "properties": {
           "type": {
